Removing extra margin no longer needed around slider controls
The new "works in Edge" slider styling results in an extra top
margin being added to sliders on mobile, so fixing that.

--- a/sass/controls.scss
+++ b/sass/controls.scss
@@ -185,7 +185,6 @@ button:disabled {
   }
 
   .control input[type='range'] {
-    margin-top: calc(0.75rem - 1px);
     margin-bottom: calc(0.75rem - 1px);
   }
 }
@@ -207,7 +206,6 @@ button:disabled {
   .control input[type='range'] {
     order: 2;
     flex: 0 0 100%;
-    margin-top: calc(0.75rem - 1px);
     margin-bottom: calc(1.0rem - 1px);
   }
 }
